# ComfyUI-Prompt-Studio

./: .gitignore  .prettierignore  .prettierrc  CHANGELOG.md  CLAUDE.md  README.md  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  vite.comfy-ui.config.ts  vite.config.ts
.changeset/: config.json  salty-facts-poke.md
.github/: copilot-instructions.md
.github/workflows/: copilot-setup-steps.yml  release.yml
database/: build.ts  config.ts  convert.ts
database/parquets/: .gitignore
extensions-static/comfy-ui/: README.md  __init__.py  config.py  pyproject.toml
extensions-static/comfy-ui/backend/: data_manager.py  file_storage.py  settings.py  utils.py
messages/: en.json  ja.json
project.inlang/: project_id
scripts/: sync-version.ts
src/: app.css  app.html  custom-elements.d.ts
src/lib/: component-utils.ts  debounce.ts  factory.ts  jotai-to-svelte-store.ts  key-utils.ts  lib.css  toast-manager.svelte
src/lib/actions/: css-vars.ts  focus-trap.ts  focus.ts
src/lib/core/: category.test.ts  category.ts  chants.test.ts  chants.ts  comment.test.ts  comment.ts  compile.test.ts  compile.ts  data-source.test.ts  data-source.ts  fuzzy.test.ts  fuzzy.ts  humanize.test.ts  humanize.ts  normalize.test.ts  normalize.ts  resources.ts  restoration.browser.test.ts  restoration.test.ts  restoration.ts  search.test.ts  search.ts  tokenizer.test.ts  tokenizer.ts
src/lib/editor/: prompt-editor.svelte
src/lib/editor/codemirror-extensions/: autocompletion.ts  (+7 more)
src/lib/entrypoints/: plain.ts
src/lib/wasm/: coding.ts  init.ts
src/lib/widget/: help-panel.svelte  prompt-file-list.svelte  prompt-studio.svelte  settings-panel.svelte
src/routes/: +page.svelte
static/: CNAME
wasm/: Cargo.toml
wasm/src/: coding.rs  dictionary_engine.rs  lib.rs  normalize.rs
(+23 files in other folders)
