[package]
name = "cps-lib"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22"
brotli = "8"
csv = "1"
nucleo-matcher = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
tsify = "0.5"
unicode-normalization = "0.1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }
web-time = "1.1"

[features]
default = []
profiling = []

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
