# https://docs.comfy.org/registry/specifications

[project]
name = "prompt-studio"
description = "[BETA] A universal ComfyUI extension that enhances any input field with advanced prompt editing, auto-completion, custom chants, and save/load functionality. This extension requires a build step, so **the nightly version and git clone will NOT work**!"
version = "0.1.0"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/SegaraRai/ComfyUI-Prompt-Studio"

[tool.comfy]
PublisherId = "segararai"
DisplayName = "ComfyUI Prompt Studio"
Icon = "https://cps-demo.roundtrip.dev/favicon.svg"
